SERVER-94795: Check for missing v-values in arrayToObject with pos (#27077)

GitOrigin-RevId: e8583eff00d4bff4746b01a3bc876b90410a26b1